garde/tests/ui/compile-fail/pattern_invalid_regex.rs
#[derive(garde::Validate)]
struct Test<'a> {
    #[garde(pattern("("))]
    field: &'a str,
}

fn main() {}
